4a Fase/COMP/Trabalho Com Suporte a Função/expr.output
Terminais sem uso na gramática

   T_FIM
   T_TRUE
   T_FALSE


Gramática

    0 $accept: Programa $end

    1 Programa: ListaFuncoes MMain BlocoPrincipal
    2         | MMain BlocoPrincipal

    3 MMain: %empty

    4 ListaFuncoes: ListaFuncoes MZerador Funcao
    5             | Funcao

    6 MZerador: %empty

    7 Funcao: EscopoFuncao BlocoPrincipal
    8       | EscopoFuncaoVazia BlocoPrincipal

    9 EscopoFuncaoVazia: TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   10 EscopoFuncao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES

   11 TipoRetorno: T_VOID
   12            | T_INT
   13            | T_DOUBLE
   14            | T_STRING

   15 DeclParametros: DeclParametros T_VIRGULA Parametro
   16               | Parametro

   17 Parametro: Tipo T_ID

   18 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd T_FECHA_CHAVES
   19               | T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   20 Declaracoes: Declaracoes Declaracao
   21            | Declaracao

   22 Declaracao: Tipo ListaId T_PONTO_E_VIRGULA

   23 Tipo: T_INT
   24     | T_DOUBLE
   25     | T_STRING

   26 ListaId: ListaId T_VIRGULA T_ID
   27        | T_ID

   28 Bloco: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   29 ListaCmd: ListaCmd Comando
   30         | Comando

   31 Comando: CmdSe
   32        | CmdEnquanto
   33        | CmdAtrib
   34        | CmdEscrita
   35        | CmdLeitura
   36        | ChamadaProc
   37        | Retorno

   38 Retorno: T_RETURN ExpressaoAritmetica T_PONTO_E_VIRGULA
   39        | T_RETURN T_LITERAL T_PONTO_E_VIRGULA

   40 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   41      | T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

   42 NLogico: %empty

   43 CmdEnquanto: T_WHILE MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

   44 CmdAtrib: T_ID T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   45         | T_ID T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   46         | T_ID T_ADICAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   47         | T_ID T_SUBTRACAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   48         | T_ID T_ADICAO T_ADICAO T_PONTO_E_VIRGULA
   49         | T_ID T_SUBTRACAO T_SUBTRACAO T_PONTO_E_VIRGULA

   50 CmdEscrita: T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   51           | T_PRINT CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   52 CmdEscritaMarcador: %empty

   53 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   54 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA

   55 ChamadaFuncao: T_ID T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   56              | T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES
   57              | T_SQRT T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES

   58 ListaParametros: ListaParametros T_VIRGULA ExpressaoAritmetica
   59                | ListaParametros T_VIRGULA T_LITERAL
   60                | ExpressaoAritmetica
   61                | T_LITERAL

   62 ExpressaoAritmetica: ExpressaoAritmetica T_ADICAO TExpressaoAritmetica
   63                    | ExpressaoAritmetica T_SUBTRACAO TExpressaoAritmetica
   64                    | ExpressaoAritmetica T_BIT_DIREITA TExpressaoAritmetica
   65                    | ExpressaoAritmetica T_BIT_ESQUERDA TExpressaoAritmetica
   66                    | TExpressaoAritmetica

   67 TExpressaoAritmetica: TExpressaoAritmetica T_MULTIPLICACAO FExpressaoAritmetica
   68                     | TExpressaoAritmetica T_DIVISAO FExpressaoAritmetica
   69                     | TExpressaoAritmetica T_RESTO FExpressaoAritmetica
   70                     | FExpressaoAritmetica

   71 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES
   72                     | T_SUBTRACAO FExpressaoAritmetica
   73                     | T_NUM
   74                     | T_ID
   75                     | ChamadaFuncao

   76 ExpressaoLogica: ExpressaoLogica T_AND MLogico FExpressaoLogica
   77                | ExpressaoLogica T_OR MLogico FExpressaoLogica
   78                | FExpressaoLogica

   79 MLogico: %empty

   80 FExpressaoLogica: T_NOT FExpressaoLogica
   81                 | T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES
   82                 | ExpressaoAritmetica T_IGUAL_IGUAL ExpressaoAritmetica
   83                 | ExpressaoAritmetica T_DIFERENTE ExpressaoAritmetica
   84                 | ExpressaoAritmetica T_MAIOR ExpressaoAritmetica
   85                 | ExpressaoAritmetica T_MAIOR_IGUAL ExpressaoAritmetica
   86                 | ExpressaoAritmetica T_MENOR ExpressaoAritmetica
   87                 | ExpressaoAritmetica T_MENOR_IGUAL ExpressaoAritmetica


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_SQRT (258) 57
T_BIT_DIREITA (259) 64
T_BIT_ESQUERDA (260) 65
T_ADICAO (261) 46 48 62
T_SUBTRACAO (262) 47 49 63 72
T_MULTIPLICACAO (263) 67
T_DIVISAO (264) 68
T_RESTO (265) 69
T_IGUAL (266) 44 45 46 47
T_ABRE_PARENTESES (267) 9 10 40 41 43 50 51 53 55 56 57 71 81
T_FECHA_PARENTESES (268) 9 10 40 41 43 50 51 53 55 56 57 71 81
T_ABRE_CHAVES (269) 18 19 28
T_FECHA_CHAVES (270) 18 19 28
T_INT (271) 12 23
T_DOUBLE (272) 13 24
T_STRING (273) 14 25
T_VOID (274) 11
T_IF (275) 40 41
T_WHILE (276) 43
T_ELSE (277) 41
T_PRINT (278) 50 51
T_READ (279) 53
T_RETURN (280) 38 39
T_ID (281) 9 10 17 26 27 44 45 46 47 48 49 53 55 56 74
T_LITERAL (282) 39 45 51 59 61
T_FIM (283)
T_NUM (284) 73
T_VIRGULA (285) 15 26 58 59
T_PONTO_E_VIRGULA (286) 22 38 39 44 45 46 47 48 49 50 51 53 54
T_AND (287) 76
T_NOT (288) 80
T_OR (289) 77
T_TRUE (290)
T_FALSE (291)
T_MAIOR_IGUAL (292) 85
T_MENOR_IGUAL (293) 87
T_DIFERENTE (294) 83
T_IGUAL_IGUAL (295) 82
T_MAIOR (296) 84
T_MENOR (297) 86


Não terminais com as regras onde eles aparecem

$accept (43)
    à esquerda: 0
Programa (44)
    à esquerda: 1 2, à direita: 0
MMain (45)
    à esquerda: 3, à direita: 1 2
ListaFuncoes (46)
    à esquerda: 4 5, à direita: 1 4
MZerador (47)
    à esquerda: 6, à direita: 4
Funcao (48)
    à esquerda: 7 8, à direita: 4 5
EscopoFuncaoVazia (49)
    à esquerda: 9, à direita: 8
EscopoFuncao (50)
    à esquerda: 10, à direita: 7
TipoRetorno (51)
    à esquerda: 11 12 13 14, à direita: 9 10
DeclParametros (52)
    à esquerda: 15 16, à direita: 10 15
Parametro (53)
    à esquerda: 17, à direita: 15 16
BlocoPrincipal (54)
    à esquerda: 18 19, à direita: 1 2 7 8
Declaracoes (55)
    à esquerda: 20 21, à direita: 18 20
Declaracao (56)
    à esquerda: 22, à direita: 20 21
Tipo (57)
    à esquerda: 23 24 25, à direita: 17 22
ListaId (58)
    à esquerda: 26 27, à direita: 22 26
Bloco (59)
    à esquerda: 28, à direita: 40 41 43
ListaCmd (60)
    à esquerda: 29 30, à direita: 18 19 28 29
Comando (61)
    à esquerda: 31 32 33 34 35 36 37, à direita: 29 30
Retorno (62)
    à esquerda: 38 39, à direita: 37
CmdSe (63)
    à esquerda: 40 41, à direita: 31
NLogico (64)
    à esquerda: 42, à direita: 41
CmdEnquanto (65)
    à esquerda: 43, à direita: 32
CmdAtrib (66)
    à esquerda: 44 45 46 47 48 49, à direita: 33
CmdEscrita (67)
    à esquerda: 50 51, à direita: 34
CmdEscritaMarcador (68)
    à esquerda: 52, à direita: 50 51
CmdLeitura (69)
    à esquerda: 53, à direita: 35
ChamadaProc (70)
    à esquerda: 54, à direita: 36
ChamadaFuncao (71)
    à esquerda: 55 56 57, à direita: 54 75
ListaParametros (72)
    à esquerda: 58 59 60 61, à direita: 55 58 59
ExpressaoAritmetica (73)
    à esquerda: 62 63 64 65 66, à direita: 38 44 46 47 50 57 58 60
    62 63 64 65 71 82 83 84 85 86 87
TExpressaoAritmetica (74)
    à esquerda: 67 68 69 70, à direita: 62 63 64 65 66 67 68 69
FExpressaoAritmetica (75)
    à esquerda: 71 72 73 74 75, à direita: 67 68 69 70 72
ExpressaoLogica (76)
    à esquerda: 76 77 78, à direita: 40 41 43 76 77 81
MLogico (77)
    à esquerda: 79, à direita: 40 41 43 76 77
FExpressaoLogica (78)
    à esquerda: 80 81 82 83 84 85 86 87, à direita: 76 77 78 80


Estado 0

    0 $accept: . Programa $end

    T_INT     deslocar, e ir ao estado 1
    T_DOUBLE  deslocar, e ir ao estado 2
    T_STRING  deslocar, e ir ao estado 3
    T_VOID    deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 3 (MMain)

    Programa           ir ao estado 5
    MMain              ir ao estado 6
    ListaFuncoes       ir ao estado 7
    Funcao             ir ao estado 8
    EscopoFuncaoVazia  ir ao estado 9
    EscopoFuncao       ir ao estado 10
    TipoRetorno        ir ao estado 11


Estado 1

   12 TipoRetorno: T_INT .

    $padrão  reduzir usando a regra 12 (TipoRetorno)


Estado 2

   13 TipoRetorno: T_DOUBLE .

    $padrão  reduzir usando a regra 13 (TipoRetorno)


Estado 3

   14 TipoRetorno: T_STRING .

    $padrão  reduzir usando a regra 14 (TipoRetorno)


Estado 4

   11 TipoRetorno: T_VOID .

    $padrão  reduzir usando a regra 11 (TipoRetorno)


Estado 5

    0 $accept: Programa . $end

    $end  deslocar, e ir ao estado 12


Estado 6

    2 Programa: MMain . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 14


Estado 7

    1 Programa: ListaFuncoes . MMain BlocoPrincipal
    4 ListaFuncoes: ListaFuncoes . MZerador Funcao

    T_ABRE_CHAVES  reduzir usando a regra 3 (MMain)
    $padrão       reduzir usando a regra 6 (MZerador)

    MMain     ir ao estado 15
    MZerador  ir ao estado 16


Estado 8

    5 ListaFuncoes: Funcao .

    $padrão  reduzir usando a regra 5 (ListaFuncoes)


Estado 9

    8 Funcao: EscopoFuncaoVazia . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 17


Estado 10

    7 Funcao: EscopoFuncao . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 18


Estado 11

    9 EscopoFuncaoVazia: TipoRetorno . T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES
   10 EscopoFuncao: TipoRetorno . T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES

    T_ID  deslocar, e ir ao estado 19


Estado 12

    0 $accept: Programa $end .

    $padrão  aceitar


Estado 13

   18 BlocoPrincipal: T_ABRE_CHAVES . Declaracoes ListaCmd T_FECHA_CHAVES
   19               | T_ABRE_CHAVES . ListaCmd T_FECHA_CHAVES

    T_SQRT    deslocar, e ir ao estado 20
    T_INT     deslocar, e ir ao estado 21
    T_DOUBLE  deslocar, e ir ao estado 22
    T_STRING  deslocar, e ir ao estado 23
    T_IF      deslocar, e ir ao estado 24
    T_WHILE   deslocar, e ir ao estado 25
    T_PRINT   deslocar, e ir ao estado 26
    T_READ    deslocar, e ir ao estado 27
    T_RETURN  deslocar, e ir ao estado 28
    T_ID      deslocar, e ir ao estado 29

    Declaracoes    ir ao estado 30
    Declaracao     ir ao estado 31
    Tipo           ir ao estado 32
    ListaCmd       ir ao estado 33
    Comando        ir ao estado 34
    Retorno        ir ao estado 35
    CmdSe          ir ao estado 36
    CmdEnquanto    ir ao estado 37
    CmdAtrib       ir ao estado 38
    CmdEscrita     ir ao estado 39
    CmdLeitura     ir ao estado 40
    ChamadaProc    ir ao estado 41
    ChamadaFuncao  ir ao estado 42


Estado 14

    2 Programa: MMain BlocoPrincipal .

    $padrão  reduzir usando a regra 2 (Programa)


Estado 15

    1 Programa: ListaFuncoes MMain . BlocoPrincipal

    T_ABRE_CHAVES  deslocar, e ir ao estado 13

    BlocoPrincipal  ir ao estado 43


Estado 16

    4 ListaFuncoes: ListaFuncoes MZerador . Funcao

    T_INT     deslocar, e ir ao estado 1
    T_DOUBLE  deslocar, e ir ao estado 2
    T_STRING  deslocar, e ir ao estado 3
    T_VOID    deslocar, e ir ao estado 4

    Funcao             ir ao estado 44
    EscopoFuncaoVazia  ir ao estado 9
    EscopoFuncao       ir ao estado 10
    TipoRetorno        ir ao estado 11


Estado 17

    8 Funcao: EscopoFuncaoVazia BlocoPrincipal .

    $padrão  reduzir usando a regra 8 (Funcao)


Estado 18

    7 Funcao: EscopoFuncao BlocoPrincipal .

    $padrão  reduzir usando a regra 7 (Funcao)


Estado 19

    9 EscopoFuncaoVazia: TipoRetorno T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES
   10 EscopoFuncao: TipoRetorno T_ID . T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES

    T_ABRE_PARENTESES  deslocar, e ir ao estado 45


Estado 20

   57 ChamadaFuncao: T_SQRT . T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES

    T_ABRE_PARENTESES  deslocar, e ir ao estado 46


Estado 21

   23 Tipo: T_INT .

    $padrão  reduzir usando a regra 23 (Tipo)


Estado 22

   24 Tipo: T_DOUBLE .

    $padrão  reduzir usando a regra 24 (Tipo)


Estado 23

   25 Tipo: T_STRING .

    $padrão  reduzir usando a regra 25 (Tipo)


Estado 24

   40 CmdSe: T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco
   41      | T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco NLogico T_ELSE MLogico Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 47


Estado 25

   43 CmdEnquanto: T_WHILE . MLogico T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES MLogico Bloco

    $padrão  reduzir usando a regra 79 (MLogico)

    MLogico  ir ao estado 48


Estado 26

   50 CmdEscrita: T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   51           | T_PRINT . CmdEscritaMarcador T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 52 (CmdEscritaMarcador)

    CmdEscritaMarcador  ir ao estado 49


Estado 27

   53 CmdLeitura: T_READ . T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 50


Estado 28

   38 Retorno: T_RETURN . ExpressaoAritmetica T_PONTO_E_VIRGULA
   39        | T_RETURN . T_LITERAL T_PONTO_E_VIRGULA

    T_SQRT             deslocar, e ir ao estado 20
    T_SUBTRACAO        deslocar, e ir ao estado 51
    T_ABRE_PARENTESES  deslocar, e ir ao estado 52
    T_ID               deslocar, e ir ao estado 53
    T_LITERAL          deslocar, e ir ao estado 54
    T_NUM              deslocar, e ir ao estado 55

    ChamadaFuncao         ir ao estado 56
    ExpressaoAritmetica   ir ao estado 57
    TExpressaoAritmetica  ir ao estado 58
    FExpressaoAritmetica  ir ao estado 59


Estado 29

   44 CmdAtrib: T_ID . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   45         | T_ID . T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   46         | T_ID . T_ADICAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   47         | T_ID . T_SUBTRACAO T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   48         | T_ID . T_ADICAO T_ADICAO T_PONTO_E_VIRGULA
   49         | T_ID . T_SUBTRACAO T_SUBTRACAO T_PONTO_E_VIRGULA
   55 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   56              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES

    T_ADICAO           deslocar, e ir ao estado 60
    T_SUBTRACAO        deslocar, e ir ao estado 61
    T_IGUAL            deslocar, e ir ao estado 62
    T_ABRE_PARENTESES  deslocar, e ir ao estado 63


Estado 30

   18 BlocoPrincipal: T_ABRE_CHAVES Declaracoes . ListaCmd T_FECHA_CHAVES
   20 Declaracoes: Declaracoes . Declaracao

    T_SQRT    deslocar, e ir ao estado 20
    T_INT     deslocar, e ir ao estado 21
    T_DOUBLE  deslocar, e ir ao estado 22
    T_STRING  deslocar, e ir ao estado 23
    T_IF      deslocar, e ir ao estado 24
    T_WHILE   deslocar, e ir ao estado 25
    T_PRINT   deslocar, e ir ao estado 26
    T_READ    deslocar, e ir ao estado 27
    T_RETURN  deslocar, e ir ao estado 28
    T_ID      deslocar, e ir ao estado 29

    Declaracao     ir ao estado 64
    Tipo           ir ao estado 32
    ListaCmd       ir ao estado 65
    Comando        ir ao estado 34
    Retorno        ir ao estado 35
    CmdSe          ir ao estado 36
    CmdEnquanto    ir ao estado 37
    CmdAtrib       ir ao estado 38
    CmdEscrita     ir ao estado 39
    CmdLeitura     ir ao estado 40
    ChamadaProc    ir ao estado 41
    ChamadaFuncao  ir ao estado 42


Estado 31

   21 Declaracoes: Declaracao .

    $padrão  reduzir usando a regra 21 (Declaracoes)


Estado 32

   22 Declaracao: Tipo . ListaId T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 66

    ListaId  ir ao estado 67


Estado 33

   19 BlocoPrincipal: T_ABRE_CHAVES ListaCmd . T_FECHA_CHAVES
   29 ListaCmd: ListaCmd . Comando

    T_SQRT          deslocar, e ir ao estado 20
    T_FECHA_CHAVES  deslocar, e ir ao estado 68
    T_IF            deslocar, e ir ao estado 24
    T_WHILE         deslocar, e ir ao estado 25
    T_PRINT         deslocar, e ir ao estado 26
    T_READ          deslocar, e ir ao estado 27
    T_RETURN        deslocar, e ir ao estado 28
    T_ID            deslocar, e ir ao estado 29

    Comando        ir ao estado 69
    Retorno        ir ao estado 35
    CmdSe          ir ao estado 36
    CmdEnquanto    ir ao estado 37
    CmdAtrib       ir ao estado 38
    CmdEscrita     ir ao estado 39
    CmdLeitura     ir ao estado 40
    ChamadaProc    ir ao estado 41
    ChamadaFuncao  ir ao estado 42


Estado 34

   30 ListaCmd: Comando .
